--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "rick_and_morty",
+  "name": "rick-and-morty-fe",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:worker": "opennextjs-cloudflare build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "preview": "opennextjs-cloudflare preview",
+    "test": "vitest",
+    "test:run": "vitest run"
   },
   "dependencies": {
     "framer-motion": "^12.23.25",
+    "gsap": "^3.14.1",
     "lucide-react": "^0.556.0",
     "next": "15.5.7",
     "react": "^18.3.1",
@@ -20,12 +25,18 @@
     "@eslint/eslintrc": "^3.3.3",
     "@opennextjs/cloudflare": "^1.14.4",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20.19.25",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^5.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.5.7",
+    "jsdom": "^27.3.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.15"
   }
 }
