--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "build:worker": "opennextjs-cloudflare build",
+    "build": "opennextjs-cloudflare build",
+    "build:standard": "next build",
     "start": "next start",
     "lint": "eslint",
     "preview": "opennextjs-cloudflare preview",
